# CompGraphicsOpenGL

./: .gitignore  CMakeLists.txt  brick.tga
src/: Building.cpp  Building.h  CMakeLists.txt  Ground.cpp  Mountain.cpp  Mountain.h  Project2.sln  Track.cpp  Track.h  WorldWindow.cpp  WorldWindow.h
tutorial/: .gitignore  CMakeLists.txt  graphics.tga
tutorial/src/: CMakeLists.txt  MyWindow.cpp  MyWindow.h  TargaImage.cpp  TargaImage.h  libtarga.c  main.cpp
